--- a/events.html
+++ b/events.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="styles/styles.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/c279bd19f7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,12 +17,14 @@
         <div class=mainWidth>
             <a href=index.html title="Homepage"><img src="images/csm-logo.png" alt="Community Science Museum logo"
                     class="headerLogo"></a>
+            <label for="hamburger"><i class="fa fa-bars" title="hamburger menu"></i></label>
+            <input type="checkbox" id="hamburger">
             <nav>
                 <ul>
                     <li><a href=index.html title="Homepage">Home</a></li>
-                    <li><a href=visit.html title="Plan your visit page">Visit us</a></li>
-                    <li><a href=exhibition.html title="Exhibition page">Exhibitions</a></li>
-                    <li><a href=events.html title="Special events page" class="selectedPage">Events</a></li>
+                    <li><a href=visit.html title="Visit us">Visit us</a></li>
+                    <li><a href=exhibition.html title="Exhibitions">Exhibitions</a></li>
+                    <li><a href=events.html title="Special events" class="selectedPage">Events</a></li>
                     <li><a href=about.html title="About us">About us</a></li>
                 </ul>
             </nav>
@@ -44,7 +47,7 @@
                 </div>
             </section>
 
-            <section title="Visiting Professor of Aeronautics" class="exhibtionArea">
+            <section title="Visiting Professor of Aeronautics" class="exhibtionArea" id="prof">
                 <div>
                     <img src="images/prof.jpg" alt="Professor holding a lecture infront of an audience" class="exImage">
                 </div>
@@ -58,7 +61,7 @@
                 </div>
             </section>
 
-            <section title="Night in the museum" class="exhibtionArea">
+            <section title="Night in the museum" class="exhibtionArea" id="night">
                 <div>
                     <img src="images/night.jpg" alt="Professor holding a lecture infront of an audience"
                         class="exImage">
@@ -73,7 +76,7 @@
                 </div>
             </section>
 
-            <section title="Energetica Exhibition on Loan" class="exhibtionArea">
+            <section title="Energetica Exhibition on Loan" class="exhibtionArea" id="limited">
                 <div>
                     <img src="images/limited.jpg" alt="Professor holding a lecture infront of an audience"
                         class="exImage">
