--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="styles/styles.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/c279bd19f7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,12 +17,14 @@
         <div class=mainWidth>
             <a href=index.html title="Homepage"><img src="images/csm-logo.png" alt="Community Science Museum logo"
                     class="headerLogo"></a>
+            <label for="hamburger"><i class="fa fa-bars" title="hamburger menu"></i></label>
+            <input type="checkbox" id="hamburger">
             <nav>
                 <ul>
                     <li><a href=index.html title="Homepage" class="selectedPage">Home</a></li>
-                    <li><a href=visit.html title="Plan your visit page">Visit us</a></li>
-                    <li><a href=exhibition.html title="Exhibition page">Exhibitions</a></li>
-                    <li><a href=events.html title="Special events page">Events</a></li>
+                    <li><a href=visit.html title="Visit us">Visit us</a></li>
+                    <li><a href=exhibition.html title="Exhibitions">Exhibitions</a></li>
+                    <li><a href=events.html title="Special events">Events</a></li>
                     <li><a href=about.html title="About us">About us</a></li>
                 </ul>
             </nav>
@@ -37,13 +40,13 @@
                 <div class="textCta">
                     <p class="textWidth">Come join us at the Community Science Museum where we’re committed to
                         making science accessible to all. Let us explore together.</p>
-                    <a href="visit.html" title="Go to visit us page" class="cta">Visit us</a>
+                    <a href="visit.html#visit" title="Go to visit us page" class="cta">Visit us</a>
                 </div>
             </section>
 
             <section title="Some of our exhibitions" class=exhibitionSection>
                 <div>
-                    <a href="exhitbition.html#lunar" title="Go to exhibtion page">
+                    <a href="exhibition.html#lunar" title="Cosmology exhibiton">
                         <img src="images/lunar.jpg"
                             title="Lunar eclipse timelaps going from fool moon to dark to full moon again"
                             class="exImage">
@@ -51,13 +54,13 @@
                     </a>
                 </div>
                 <div>
-                    <a href="exhitbition.html#biology" title="">
+                    <a href="exhibition.html#biology" title="Evolution exhibiton">
                         <img src="images/skeleton.jpg" title="" class="exImage">
                         <p>Evolution</p>
                     </a>
                 </div>
                 <div>
-                    <a href="exhitbition.html#robotics" title="">
+                    <a href="exhibition.html#robotics" title="Robotics and AI exhibition">
                         <img src="images/vr.jpg" title="" class="exImage">
                         <p>Robotics and AI</p>
                     </a>
@@ -68,13 +71,13 @@
                 <div class="textCta">
                     <p class="textWidth">Do you want to support the museum? There are various ways you can support the
                         museum.</p>
-                    <a href="about.html#support" title="Go to about us page" class="cta" id="cta2">Support us</a>
+                    <a href="about.html#support" title="Support" class="cta" id="cta2">Support us</a>
                 </div>
             </section>
 
             <section title="Some of our special events" class=exhibitionSection>
                 <div>
-                    <a href="event.html#prof" title="Go to event Professor of Aeronautics">
+                    <a href="event.html#prof" title="Professor of Aeronautics">
                         <img src="images/prof.jpg" title="" class="exImage">
                         <p>Professor of Aeronautics</p>
                     </a>
