--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   <link href="styles/styles.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/c279bd19f7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,21 +18,15 @@
       <a href="index.html" title="Homepage"><img src="images/csm-logo.png" alt="Community Science Museum logo"
           class="headerLogo" />
       </a>
+      <label for="hamburger"><i class="fa fa-bars" title="hamburger menu"></i></label>
+      <input type="checkbox" id="hamburger">
       <nav>
         <ul>
-          <li><a href="index.html" title="Homepage">Home</a></li>
-          <li>
-            <a href="visit.html" title="Plan your visit page">Visit us</a>
-          </li>
-          <li>
-            <a href="exhibition.html" title="Exhibition page">Exhibitions</a>
-          </li>
-          <li>
-            <a href="events.html" title="Special events page">Events</a>
-          </li>
-          <li>
-            <a href="about.html" title="About us" class="selectedPage">About us</a>
-          </li>
+          <li><a href=index.html title="Homepage">Home</a></li>
+          <li><a href=visit.html title="Visit us">Visit us</a></li>
+          <li><a href=exhibition.html title="Exhibitions">Exhibitions</a></li>
+          <li><a href=events.html title="Special events">Events</a></li>
+          <li><a href=about.html title="About us" class="selectedPage">About us</a></li>
         </ul>
       </nav>
     </div>
@@ -167,17 +162,12 @@
         <div class="exhibtionText">
           <h2 class="textWidth">Internship</h2>
           <p class="textWidth">
-            A number of people volunteer their time and effort to keep the
-            displays in good order and ready for visitors to come and enjoy.
-            Volunteering has its perks including getting to see behind the
-            scenes of a working museum, access to staff-only lectures, and a
-            monthly lunch where all staff and volunteers come together to
-            discuss ideas for future exhibits and strategies for the museum.
+            Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of
+            nature with people? Well you could be just the right person to enjoy an internship at the museum.
           </p>
           <p class="textWidth">
-            You can help volunteer in a number of different spheres. Please
-            contact us if you’d like to find out more about how you can get
-            involved.
+            You’ll be learning from a number of different academics and people who are passionate about science and
+            sharing it with the wider community.
           </p>
         </div>
       </section>
