--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Community Science Museum - Explore together" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8" />
-  <title>Special events at Community Science Museum</title>
+  <title>About Community Science Museum</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   <link href="styles/styles.css" rel="stylesheet" />
@@ -48,7 +48,7 @@
 
       <section title="For kids" class="exhibtionArea">
         <div>
-          <img src="images/kids.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+          <img src="images/kids.jpg" alt="A boy reading a book while sitting on books" class="exImage" />
         </div>
         <div class="exhibtionText">
           <h2 class="textWidth">For kids</h2>
@@ -78,7 +78,7 @@
 
       <section title="For teacher" class="exhibtionArea">
         <div>
-          <img src="images/teacher.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+          <img src="images/teacher.jpg" alt="Cartoon teacher experimenting" class="exImage" />
         </div>
         <div class="exhibtionText">
           <h2 class="textWidth">For teacher</h2>
@@ -99,7 +99,7 @@
 
       <section title="For researcher" class="exhibtionArea">
         <div>
-          <img src="images/researcher.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+          <img src="images/researcher.jpg" alt="Three bootles of different liquids" class="exImage" />
         </div>
         <div class="exhibtionText">
           <h2 class="textWidth">For researcher</h2>
@@ -115,7 +115,7 @@
 
       <section title="Support" class="exhibtionArea" id="support">
         <div>
-          <img src="images/support.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+          <img src="images/support.jpg" alt="Model of an atom" class="exImage" />
         </div>
         <div class="exhibtionText">
           <h2 class="textWidth">Support</h2>
@@ -135,7 +135,7 @@
 
       <section title="Volunteer" class="exhibtionArea">
         <div>
-          <img src="images/volunteer.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+          <img src="images/volunteer.jpg" alt="A volunteer looking in a microscope" class="exImage" />
         </div>
         <div class="exhibtionText">
           <h2 class="textWidth">Volunteer</h2>
@@ -157,7 +157,7 @@
 
       <section title="Internship" class="exhibtionArea">
         <div>
-          <img src="images/intern4.jpg" alt="Professor holding a lecture infront of an audience" class="exImage" />
+          <img src="images/intern4.jpg" alt="Exhibtion area with flying dinosaur" class="exImage" />
         </div>
         <div class="exhibtionText">
           <h2 class="textWidth">Internship</h2>
