--- a/events.html
+++ b/events.html
@@ -63,8 +63,7 @@
 
             <section title="Night in the museum" class="exhibtionArea" id="night">
                 <div>
-                    <img src="images/night.jpg" alt="Professor holding a lecture infront of an audience"
-                        class="exImage">
+                    <img src="images/night.jpg" alt="Exhibition area at night" class="exImage">
                 </div>
                 <div class="exhibtionText">
                     <h2 class=textWidth>Night in the museum</h2>
@@ -78,8 +77,7 @@
 
             <section title="Energetica Exhibition on Loan" class="exhibtionArea" id="limited">
                 <div>
-                    <img src="images/limited.jpg" alt="Professor holding a lecture infront of an audience"
-                        class="exImage">
+                    <img src="images/limited.jpg" alt="Lab woman testing power equimpent" class="exImage">
                 </div>
                 <div class="exhibtionText">
                     <h2 class=textWidth>Energetica Exhibition on Loan</h2>
