--- a/exhibition.html
+++ b/exhibition.html
@@ -51,8 +51,7 @@
 
             <section title="The Cosmology Exhibition" class="exhibtionArea" id="lunar">
                 <div>
-                    <img src="images/lunar.jpg"
-                        alt="Lunar eclipse timelaps going from fool moon to dark to full moon again" class="exImage">
+                    <img src="images/lunar.jpg" alt="Lunar eclipse timelaps" class="exImage">
                 </div>
                 <div class="exhibtionText">
                     <h2 class=textWidth>Cosmology</h2>
