--- a/index.html
+++ b/index.html
@@ -47,21 +47,19 @@
             <section title="Some of our exhibitions" class=exhibitionSection>
                 <div>
                     <a href="exhibition.html#lunar" title="Cosmology exhibiton">
-                        <img src="images/lunar.jpg"
-                            title="Lunar eclipse timelaps going from fool moon to dark to full moon again"
-                            class="exImage">
-                        <p>Explore the wonders of our cosmos</p>
+                        <img src="images/lunar.jpg" alt="Lunar eclipse timelaps" class="exImage">
+                        <p>Cosmology</p>
                     </a>
                 </div>
                 <div>
                     <a href="exhibition.html#biology" title="Evolution exhibiton">
-                        <img src="images/skeleton.jpg" title="" class="exImage">
+                        <img src="images/skeleton.jpg" alt="Skeletons of men and apes" class="exImage">
                         <p>Evolution</p>
                     </a>
                 </div>
                 <div>
                     <a href="exhibition.html#robotics" title="Robotics and AI exhibition">
-                        <img src="images/vr.jpg" title="" class="exImage">
+                        <img src="images/vr.jpg" alt="Girl wearing VR-glasses" class="exImage">
                         <p>Robotics and AI</p>
                     </a>
                 </div>
@@ -77,20 +75,20 @@
 
             <section title="Some of our special events" class=exhibitionSection>
                 <div>
-                    <a href="event.html#prof" title="Professor of Aeronautics">
-                        <img src="images/prof.jpg" title="" class="exImage">
+                    <a href="events.html#prof" title="Professor of Aeronautics">
+                        <img src="images/prof.jpg" alt="Professor speaking infront an audience" class="exImage">
                         <p>Professor of Aeronautics</p>
                     </a>
                 </div>
                 <div>
-                    <a href="event.html#night" title="Go to event Night at the museum">
-                        <img src="images/night.jpg" title="" class="exImage">
+                    <a href="events.html#night" title="Night at the museum">
+                        <img src="images/night.jpg" alt="Exhibition area at night" class="exImage">
                         <p>Night at the museum</p>
                     </a>
                 </div>
                 <div>
-                    <a href="event.html#limited" title="Go to event limited exhibition">
-                        <img src="images/limited.jpg" title="" class="exImage">
+                    <a href="events.html#limited" title="Limited exhibition">
+                        <img src="images/limited.jpg" alt="Lab woman testing power equipemnt" class="exImage">
                         <p>Limited exhibition</p>
                     </a>
                 </div>
