--- a/exhibition.html
+++ b/exhibition.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Community Science Museum - Explore together" />
+    <meta name="description" content="Take a look at our science exhibtions we have at the moment" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <title>Exhibition spaces at Community Science Museum</title>
