--- a/visit.html
+++ b/visit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Community Science Museum - Explore together" />
+    <meta name="description" content="Come visit our great museum" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <title>Visit Community Science Museum</title>
