--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta name="description" content="Community Science Museum - Explore together" />
+  <meta name="description" content="Find out more about the oppurunities at Community Science Museum" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8" />
-  <title>About Community Science Museum</title>
+  <title>About Us</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   <link href="styles/styles.css" rel="stylesheet" />
