--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Community Science Museum - Explore together" />
+    <meta name="description" content="Our special events are limited so explore them now" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <title>Special events at Community Science Museum</title>
