--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="textCta">
                     <p class="textWidth">Do you want to support the museum? There are various ways you can support the
                         museum.</p>
-                    <a href="about.html#support" title="Support" class="cta" id="cta2">Support us</a>
+                    <a href="about.html#support" title="Support us" class="cta" id="cta2">Support us</a>
                 </div>
             </section>
 
